--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Eileen Kolster</title>
+    <meta
+      name="description"
+      content="Eileen Kolster is a British/Dutch composer based in Amsterdam. She is a violinist and pianist, and her music ranges from intimate acoustic and ambient textures to expansive orchestral and synth-driven soundscapes."
+    />
   </head>
   <body>
     <div id="root"></div>
