move css imports to head

--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
       name="description"
       content="Eileen Kolster is a British/Dutch composer based in Amsterdam. She is a violinist and pianist, and her music ranges from intimate acoustic and ambient textures to expansive orchestral and synth-driven soundscapes."
     />
+    <link rel="stylesheet" href="/src/styles/reset.css" />
+    <link rel="stylesheet" href="/src/styles/fonts.css" />
+    <link rel="stylesheet" href="/src/styles/variables.css" />
+    <link rel="stylesheet" href="/src/styles/animations.css" />
+    <link rel="stylesheet" href="/src/styles/typography.css" />
+    <link rel="stylesheet" href="/src/styles/layout.css" />
+    <link rel="stylesheet" href="/src/styles/media.css" />
   </head>
   <body>
     <div id="root"></div>
