--- a/index.html
+++ b/index.html
@@ -35,13 +35,29 @@
       name="description"
       content="Eileen Kolster is a British/Dutch composer based in Amsterdam. She is a violinist and pianist, and her music ranges from intimate acoustic and ambient textures to expansive orchestral and synth-driven soundscapes."
     />
-    <link rel="stylesheet" href="/src/styles/reset.css" />
-    <link rel="stylesheet" href="/src/styles/fonts.css" />
-    <link rel="stylesheet" href="/src/styles/variables.css" />
-    <link rel="stylesheet" href="/src/styles/animations.css" />
-    <link rel="stylesheet" href="/src/styles/typography.css" />
-    <link rel="stylesheet" href="/src/styles/layout.css" />
-    <link rel="stylesheet" href="/src/styles/media.css" />
+    <!-- Preload LCP hero image for faster discovery -->
+    <link
+      rel="preload"
+      as="image"
+      href="/src/assets/images/photos/eileen-roof-violin.webp"
+      fetchpriority="high"
+    />
+    <!-- Preload critical fonts (Livvic is the primary body font) -->
+    <link
+      rel="preload"
+      href="/node_modules/@fontsource/livvic/files/livvic-latin-400-normal.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="/node_modules/@fontsource/baloo-da-2/files/baloo-da-2-latin-500-normal.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <!-- Base styles are imported in JS so Vite can bundle and minify (avoids 7 render-blocking requests) -->
   </head>
   <body>
     <div id="root"></div>
