--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <title>Eileen Kolster</title>
     <meta
