--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       href="/src/assets/images/photos/eileen-roof-violin.webp"
       fetchpriority="high"
     />
-    <!-- Preload critical fonts (Livvic is the primary body font) -->
+    <!-- Preload critical fonts (Work Sans is body, Baloo Da 2 is headings) -->
     <link
       rel="preload"
-      href="/node_modules/@fontsource/livvic/files/livvic-latin-400-normal.woff2"
+      href="/node_modules/@fontsource-variable/work-sans/files/work-sans-latin-wght-normal.woff2"
       as="font"
       type="font/woff2"
       crossorigin
